KeyGraph for JSON
functionnal test of VSPA using key-graph for BasicTypes and RecursiveList schemas